# bootcamp_lv_python

./: .gitignore  README.md  ex_numpy.py  m2.py  pyproject.toml
aula1/: main.py
aula2/: exercicos.py
aula2/projeto_pandas/: clean
aula3/: exercicos.py
aula4/: arquivos.py  aula_aogoritimo.py  ex_dicionario.py  exemplo.csv  main.py
aulas_aleatorias/: m2.py  m3.py
